<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/v"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbtrapecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbTrapecio" />

        <RadioButton
            android:id="@+id/rbrombo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbRombo" />

        <RadioButton
            android:id="@+id/rbheptagono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbheptagono" />
    </RadioGroup>

</LinearLayout>